2004-01-28  Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-group-dialog.c
	* src/planner-group-model.c
	* src/planner-group-model.h
	When you add a new group, it is selected by default and the
	group name cell is in editing state.
	* src/planner-resource-view.c
	When you add a resource, the resource name cell is in editing state.

2004-01-28  Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-resource-view.c: Added undo for all resources properties.

2004-01-25  Richard Hult  <richard@imendio.com>

	* src/Makefile.am (sql_plugin): 
	* configure.in: Fix sql plugin flags.

	* src/planner-window.c (window_undo_state_changed_cb) 
	(window_redo_state_changed_cb): Set tooltip as well.

2004-01-25  Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-resource-view.c: Added undo for resource name property.
	Now it will be easy to add undo for all the other properties.
	* src/planner-task-tree.c: coding style corrections.

2004-01-25  Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-resource-view.c: Added undo for resource insertion.

2004-01-23  Xavier Ordoquy   <xordoquy@wanadoo.fr>

	* data/images/resources_usage.png:
	* data/images/Makefile.am:
	Created resource usage (timetable) icon

	* src/planner-ttable-view.c:
	Included the new icon and changed timetable name to resource usage.

2004-01-22  Xavier Ordoquy   <xordoquy@wanadoo.fr>

	* src/planner-ttable-model.c: resources are removed from the ttable.

2004-01-22  Xavier Ordoquy   <xordoquy@wanadoo.fr>

	* src/planner-ttable-row.c: fixed segfault when leaving planner.

2004-01-15  Alvaro del Castillo  <acs@barrapunto.com>

	* Big changes for the migration to libgda in the SQL backend 
	* configure.in: Added libgda test. In the next revision
	we have to clean the libpq test cause we won't use it.
	* docs/sql/README: we need a UNICODE database in Postgres
	* libplanner/mrp-sql.[ch]: migration from libpq to libgda
	* libplanner/Makefile.am: use libgda libraries 